tests/outref/TERR028.ref

-- TERR028 : OCTO345 : Issue error when inline M function use is attempted

-- Attempt to use an extrinsic function. Use a known existing function to test the case
-- where it is possible to call, but disallowed.
SELECT * FROM names WHERE id = $$ABS^%ydboctosqlfunctions(-2);

-- Attempt to use intrinsic function
SELECT $ZWRITE(firstname) FROM names;

-- Attempt to use inline extrinsic functions with leading % in M label or routine
SELECT * FROM names WHERE id = $$^%("some value");
SELECT * FROM names WHERE id = $$%^%("some value");
SELECT * FROM names WHERE id = $$%ABS^someroutine(-2);
SELECT * FROM names WHERE id = $$ABS^%someroutine(-2);

-- Attempt to use inline extrinsic function in SELECT list
SELECT $$a('b');

-- Attempt to use inline extrinsic function in FROM clause
SELECT * FROM names WHERE $$a('b');

-- Attempt to use inline extrinsic function in HAVING clause
SELECT id FROM names GROUP BY id HAVING $$a(id);

-- Attempt to use inline extrinsic function in alias name
select id as $$dummyextrinsicfunction^something from names;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected EXTRINSIC_FUNCTION
LINE 3:1: SELECT * FROM names WHERE id = $$ABS^%ydboctosqlfunctions(-2);
                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^
OCTO> SELECT * FROM names WHERE id = $$ABS^%ydboctosqlfunctions(-2);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected INTRINSIC_FUNCTION
LINE 5:1: SELECT $ZWRITE(firstname) FROM names;
                 ^^^^^^^
OCTO> SELECT $ZWRITE(firstname) FROM names;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected EXTRINSIC_FUNCTION
LINE 7:1: SELECT * FROM names WHERE id = $$^%("some value");
                                         ^^^^
OCTO> SELECT * FROM names WHERE id = $$^%("some value");
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected EXTRINSIC_FUNCTION
LINE 8:1: SELECT * FROM names WHERE id = $$%^%("some value");
                                         ^^^^^
OCTO> SELECT * FROM names WHERE id = $$%^%("some value");
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected EXTRINSIC_FUNCTION
LINE 9:1: SELECT * FROM names WHERE id = $$%ABS^someroutine(-2);
                                         ^^^^^^^^^^^^^^^^^^
OCTO> SELECT * FROM names WHERE id = $$%ABS^someroutine(-2);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected EXTRINSIC_FUNCTION
LINE 10:1: SELECT * FROM names WHERE id = $$ABS^%someroutine(-2);
                                          ^^^^^^^^^^^^^^^^^^
OCTO> SELECT * FROM names WHERE id = $$ABS^%someroutine(-2);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected EXTRINSIC_FUNCTION
LINE 12:1: SELECT $$a('b');
                  ^^^
OCTO> SELECT $$a('b');
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected EXTRINSIC_FUNCTION
LINE 14:1: SELECT * FROM names WHERE $$a('b');
                                     ^^^
OCTO> SELECT * FROM names WHERE $$a('b');
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected EXTRINSIC_FUNCTION
LINE 16:1: SELECT id FROM names GROUP BY id HAVING $$a(id);
                                                   ^^^
OCTO> SELECT id FROM names GROUP BY id HAVING $$a(id);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected EXTRINSIC_FUNCTION
LINE 18:1: select id as $$dummyextrinsicfunction^something from names;
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
OCTO> select id as $$dummyextrinsicfunction^something from names;
OCTO> 
